@@ -422,6 +422,13 @@ main (int argc, char *argv[])
   /* Initialize all modules. */
   grub_init_all ();
 
+  grub_lvm_fini ();
+  grub_mdraid_fini ();
+  grub_raid_fini ();
+  grub_raid_init ();
+  grub_mdraid_init ();
+  grub_lvm_init ();
+
   /* Do it.  */
   if (argument_is_device)
     probe (NULL, argument);
