@@ -614,6 +614,13 @@ main (int argc, char *argv[])
   /* Initialize all modules. */
   grub_init_all ();
 
+  grub_lvm_fini ();
+  grub_mdraid_fini ();
+  grub_raid_fini ();
+  grub_raid_init ();
+  grub_mdraid_init ();
+  grub_lvm_init ();
+
   find_dest_dev (&ginfo, argv);
 
   ginfo.prefix = grub_make_system_path_relative_to_its_root (ginfo.dir ?
